--- a/uis/mainwindow.ui
+++ b/uis/mainwindow.ui
@@ -21,7 +21,7 @@
        <enum>QTabWidget::North</enum>
       </property>
       <property name="currentIndex">
-       <number>23</number>
+       <number>24</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -4124,6 +4124,24 @@
         </item>
        </layout>
       </widget>
+      <widget class="QWidget" name="tab_25">
+       <attribute name="title">
+        <string>freetest1</string>
+       </attribute>
+       <widget class="QPushButton" name="pushButton_29">
+        <property name="geometry">
+         <rect>
+          <x>110</x>
+          <y>70</y>
+          <width>92</width>
+          <height>24</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>PushButton</string>
+        </property>
+       </widget>
+      </widget>
      </widget>
     </item>
    </layout>
@@ -4134,7 +4152,7 @@
      <x>0</x>
      <y>0</y>
      <width>851</width>
-     <height>23</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
